# RAG-Eval-Ja-system

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.ui  README.md  build_log.txt  docker-compose.yml  pyproject.toml
.serena/: project.yml
app/: __init__.py
app/api/: main.py
app/ui/: streamlit_app.py
data/evaluation/: RESULTS_COMPARISON.md  qa_dataset.parquet
data/evaluation/results/: evaluation_detail_AgenticRAG.csv  evaluation_detail_NaiveRAG.csv  evaluation_detail_NaiveRAG_v3.csv  evaluation_summary_AgenticRAG.json  evaluation_summary_AgenticRAG_v3.json  evaluation_summary_NaiveRAG.json
data/evaluation/results_v1_baseline/: README.md  evaluation_detail_NaiveRAG.csv  (+1 more)
docs/: ACCURACY_IMPROVEMENTS.md  Cometにおいてまとめ初期.txt  DEVELOPMENT_REPORT.md  IMPROVEMENT_RESULTS.md  PROJECT_WRAP_UP_REPORT.md  V3_IMPROVEMENT_PLAN.md  allganize-RAG-Evaluation-Dataset-JA · Datasets at Hugging Face.url  evaluation_report.md  execution_guide.md  implementation_plan.md  setup_guide.md  system_specification.md  課題内容_完全版.txt  鶴村　ラボオAI様アピール報告書.txt
scripts/: download_dataset.py  ingest_documents.py  run_evaluation.py
src/: __init__.py
src/agents/: __init__.py
src/config/: settings.py
src/evaluation/: __init__.py  evaluator.py  metrics.py
src/generation/: __init__.py  llm_client.py  prompt_templates.py
src/ingestion/: __init__.py  document_classifier.py  embedder.py  image_processor.py  pdf_parser.py  text_splitter.py
src/rag/: __init__.py  agentic_rag.py  base.py  naive_rag.py
src/retrieval/: __init__.py  reranker.py  retriever.py  vector_store.py
(+5 files in other folders)
